--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-color": "^2.19.3",
+    "react-dom": "17.0.2",
+    "reactcss": "^1.2.3"
   },
   "devDependencies": {
     "eslint": "8.5.0",
